<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Programming on Mobile Devices</string>
    <string name="hello">Yamba</string>
    <string name="buttonValue">Submit</string>
    <string name="numberOfChars">140</string>
    <string name="user">User</string>
    <string name="pass">Password</string>
    <string name="url">URL</string>
    <string name="done">Done</string>
    <string name="load">Loading</string>
    <string name="userSum">Yamba User Name Client</string>
    <string name="passSum">Yamba password Client</string>
    <string name="urlSum">Yamba URL</string>
    <string name="nChars">Number of Caracters</string>
    <string name="nCharsSum">Twit max number</string>
    <string name="nCharsKey">numChars</string>
    <string name="nTwits">Number of Twits</string>
    <string name="nTwitsSum">Max number of Twits</string>
    <string name="nTwitsKey">numTwits</string>
    <string name="userKey">username</string>
    <string name="passKey">password</string>
    <string name="urlKey">url</string>
    <string name="publishTimeKey">time</string>
    <string name="prefs">Preferences</string>
    <string name="timeline">Timeline</string>
    <string name="defaultUrl">http://yamba.marakana.com/api</string>
    <string name="hours"> hours ago</string>
    <string name="minutes"> minutes ago</string>
    <string name="descrKey">descr</string>
    <string name="imgKey">img</string>
    <string name="titleKey">title</string>
    <string name="status">Status</string>
    <string name="hintTextStatus">Enter your status</string>
    <string name="authorImage">Imagem do autor</string>
    <string name="detail">Detail</string>
    <string name="errorMessage">Error: Number of chars exceeded </string>
    <string name="timelineRefresh">Refresh</string>
</resources>