<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <EditTextPreference
        android:key="@string/userKey"
        android:title="@string/user"
        android:summary="@string/userSum"/>
    <EditTextPreference
        android:key="@string/passKey"
        android:title="@string/pass"
        android:summary="@string/passSum" 
        android:password="true" />
    <EditTextPreference
        android:key="@string/urlKey"
        android:title="@string/url"
        android:summary="@string/urlSum" />
    <EditTextPreference
        android:key="@string/nCharsKey"
        android:title="@string/nChars"
        android:summary="@string/nCharsSum" />
    <EditTextPreference
        android:key="@string/nTwitsKey"
        android:title="@string/nTwits"
        android:summary="@string/nTwitsSum" />
</PreferenceScreen>