<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/text"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="right"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/status"
        android:textSize="25dp" />

    <TextView
        android:id="@+id/buttonNChars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_margin="10dp"
        android:text="@string/numberOfChars" />

    <EditText
        android:id="@+id/textEdit"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_weight="0.54"
        android:gravity="top|center_horizontal"
        android:hint="@string/hintTextStatus"
        android:inputType="textMultiLine"
        android:singleLine="false" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonValue" />

</LinearLayout>